--- a/docs/v1.5_progress.md
+++ b/docs/v1.5_progress.md
@@ -62,31 +62,32 @@
 - [x] Verify MongoDB storage compatibility
 
 ### 📅 Phase 3: Pipeline Automation (Days 10-13)
-**Status**: Ready to Start 🟢
+**Status**: In Progress 🔄
 
-#### 3.1 Automated Runner
-- [ ] Create `run_automated_evaluation.py`
-- [ ] Implement `AutomatedEvaluationRunner` class
-- [ ] Add command-line argument parsing
-- [ ] Create dry-run mode
+#### 3.1 Automated Runner ✅
+- [x] Create `run_automated_evaluation.py`
+- [x] Implement `AutomatedEvaluationRunner` class
+- [x] Add command-line argument parsing
+- [x] Create dry-run mode
 
-#### 3.2 Resume/Skip Logic
-- [ ] Implement completed evaluation detection
-- [ ] Add version-aware skip logic (prompts/criteria)
-- [ ] Create force-rerun functionality
-- [ ] Add checkpoint saving
+#### 3.2 Resume/Skip Logic ✅
+- [x] Implement completed evaluation detection
+- [x] Add version-aware skip logic (prompts/criteria)
+- [x] Create force-rerun functionality
+- [ ] Add checkpoint saving (deferred - progress saved after each model)
 
-#### 3.3 Progress Tracking
-- [ ] Add progress bars with tqdm
-- [ ] Implement status reporting
-- [ ] Create summary statistics
-- [ ] Add estimated time remaining
+#### 3.3 Progress Tracking ✅
+- [x] Add progress tracking data structure
+- [x] Implement status reporting to JSON file
+- [x] Create summary statistics
+- [x] Add cost tracking
+- [ ] Add progress bars with tqdm (deferred - data available for frontend SSE)
 
-#### 3.4 Error Handling
-- [ ] Implement retry logic with exponential backoff
-- [ ] Add graceful failure handling
-- [ ] Create error logging system
-- [ ] Add recovery from interruptions
+#### 3.4 Error Handling ✅
+- [x] Implement retry logic (via LiteLLMEvaluator)
+- [x] Add graceful failure handling
+- [x] Create error logging system
+- [x] Add recovery from interruptions (via resume logic)
 
 ### 📅 Phase 4: Streamlit Dashboard (Days 14-20)
 **Status**: Not Started ⚪
